--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ btn.childNodes[0].nodeValue="More";
 </header>
 <div>
 <span>
-<img src="mechanicalmarauders.github.io/MMlogo.JPG" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="left"i/>
+<img src="mechanicalmarauders.github.io/MMlogo.JPG" style="display:block;margin:auto;" align="left"i/>
 </span>
 <h1>Who Are We</h1>
 <p>We are FTC Team 6123, the Mechanical Marauders. A neighborhood team founded by the Flack family. This is our website.</p>
