--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ btn.childNodes[0].nodeValue="More";
 }
 };
 </script>
-<header>Mechanical Marauders<img id="logo2" src="MMlogo3.jpg" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="right"/>
+<header>Mechanical Marauders<img id="logo2" src="MMlogo.jpg" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="right"/>
 </header>
 <div>
 <span>
-<img src="mechanicalmarauders.github.io/MMlogo.JPG" style="display:block;margin:auto;" align="left"i/>
+<img src="MMlogo.jpg" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="left"i/>
 </span>
 <h1>Who Are We</h1>
 <p>We are FTC Team 6123, the Mechanical Marauders. A neighborhood team founded by the Flack family. This is our website.</p>
