--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ btn.childNodes[0].nodeValue="More";
 }
 };
 </script>
-<header>Mechanical Marauders<img id="logo2" src="MMlogo2.jpg" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="right"/>
+<header>Mechanical Marauders<img id="logo2" src="MMlogo2.jpg" style="display:block;margin:auto;" align="right"/>
 </header>
 <div>
 <span>
