--- a/Outreach.html
+++ b/Outreach.html
@@ -59,7 +59,7 @@ btn.childNodes[0].nodeValue="More";
 <div>
 <img src="MMlogo.jpg" style="display:block;margin:auto;" title="The Mechanical Marauders demostrating the robot" />
 <h1>Outreach</h1>
-<p>All the teams focus on the robot, but we have decided outreach is just as important. Each team member past or new has gained so much from FIRST and we want to give it back.
+<p>Over the years, our team has discovered the importance of outreach. We have fully embraced the it is more than just about the robot motto. This year we have done more outreach than ever and we are just getting started. We are planning to volunteer at FLL tournaments and create a basic robot instruction manual for rookie teams. Giving back is a big part of what we do because of all we have gained from FTC over the years.
 </p>
 <h3>Some examples of our outreach are </h3>
 <h5><p>Physics in Action</p></h5>
@@ -78,13 +78,32 @@ btn.childNodes[0].nodeValue="More";
 <div id="otext"><p>Date: April 27, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration, practiced what I would say, and prepared the other demonstrations.</p>
 <p>Description: Brought the robot into Bayer's Take Your Child to Work Day. Chloe, Ethan, and Mohit presented the robot in front of a large audience of about 100 kids. Chloe introduced the team and Ethan demonstrated the robot. The audience was then split up into two groups. One group looked at all the demonstration pieces presented by Chloe and the Coach, the other learned more about the robot specifics with Ethan and Mohit.</p>
-</div>
+</div>
 <h5><p>Cub Scout Day Camp</p></h5>
-<div id="otext"><p>Date: August 3rd</p>
+<div id="otext"><p>Date: August 3rd, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration.</p>
 <p>Description: Chloe and Ethan spent 2 hours demonstrating the robot to cub scouts and letting them drive the robot.</p>
 </div>
+<h5><p>Going Back to School</p></h5>
+<div id="otext"><p>Date: March 24th, 3 hours</p>
+<p>Preparation: Prepared the robot for demonstration and brought the other demonstration pieces (scissor lift, motor we disassembled, etc.)</p>
+<p>Description: A local school reached out to Dr. Bennet about having a robotics team come in so last minute we volunteered to help. We demonstrated the robot in front of a group of kids. We then divided the group, so half could look at the demonstration items we brought such as the scissor lift, a motor that has been taken apart, and the tape measure hook. The other group learned more about the robot and a few even got to drive it. The groups then switched so everyone saw both things. </p>
 </div>
+<img src="Going Back To School.jpg style="display:block;margin:auto;" title="Going Back To School" />
+<h5><p>Girl Scout Demo</p></h5>
+<div id="otext"><p>Date: October 8th, 2 hours</p>
+<p>Preparation: Prepared the robot for demonstration and organized the demonstration materials.</p>
+<p>Description: Chloe demonstrated the robot to a Cadet Girl Scout meeting (middle school aged girls). All the girls were then given the opportunity to drive the robot. They also looked at the demonstration materials and asked any questions they had. The girls and leaders were very impressed with the robot.</p>
+</div>
+<h5><p>NetApp</p></h5>
+<div id="otext"><p>Date: July 26th, 5 hours</p>
+<p>Preparation: Reviewed the event so everyone knew what was going to happen and was prepared.
+<p>Description: Julie shared her experience with FTC with a group of girls. She then helped the girls build and program Mindstorms Lego robots to complete specific tasks.  
+</div>
+<h5><p>Pre-Engineering<p></h5>
+<div id="otext"><p>Date: June 12, 12 hours</p>
+<p>Preparation: We spent 2 hours counting and finding pieces for a kit robot for groups to build. Then we worked with other teams to make sure there were 6 complete kits. Once we had two kits, we pre-assembled the arm to speed up the building process.</p>
+<p>Description: We worked with a few teams to help kids build a robot from instructions. In the morning we had one group of kids. The kids then moved on to a different activity and another group came in the afternoon. Due to the complexity of the robot we made modifications as time went on. There was a different set of kids in the morning and afternoon. In the morning we helped the kids build the robot from the construction manual. However, not all groups were able to finish. We also ran into some other problems that the volunteers had to trouble shoot, so we could get all the robots working. In the afternoon, we decided to change the goal and focus on building the fastest robot instead of building the robot in the manual. This meant that Chloe had to create a new program without a servo claw for the teams to use. Overall, we taught the kids how to build robots and introduced some of the problems that are an everyday occurrence for FTC teams. </p>
 <footer id="footer" align="center"><font-size="2px">
 Copyright 2017 Mechanical Marauders.
 </font>
