--- a/Outreach.html
+++ b/Outreach.html
@@ -89,7 +89,7 @@ btn.childNodes[0].nodeValue="More";
 <p>Preparation: Prepared the robot for demonstration and brought the other demonstration pieces (scissor lift, motor we disassembled, etc.)</p>
 <p>Description: A local school reached out to Dr. Bennet about having a robotics team come in so last minute we volunteered to help. We demonstrated the robot in front of a group of kids. We then divided the group, so half could look at the demonstration items we brought such as the scissor lift, a motor that has been taken apart, and the tape measure hook. The other group learned more about the robot and a few even got to drive it. The groups then switched so everyone saw both things. </p>
 </div>
-<img src="Going Back To School.jpg style="display:block;margin:auto;" title="Going Back To School" />
+<img src="Going Back To School.jpg" style="display:block;margin:auto;" title="Going Back To School" />
 <h5><p>Girl Scout Demo</p></h5>
 <div id="otext"><p>Date: October 8th, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration and organized the demonstration materials.</p>
