--- a/Outreach.html
+++ b/Outreach.html
@@ -68,22 +68,26 @@ btn.childNodes[0].nodeValue="More";
 <p>reparation: Prepared the robot for demonstration and brought it and the center vortex into school.</p>
 <p>Description: Brought the robot into 1st period, SMART Lunch, 3rd period, and 4th period to demonstrate the robot to students in Physics I and II. Julie and I demonstrated the robot, explained the engineering process, and let the kids drive the robot.</p>
 </div>
+<img src="Physics in Action" style="display:block;margin:auto;" title="Physics in Action" />
 <h5><p>Science Fair</p></h5>
 <div id="otext">
 <p>Date: April 19, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration and brought the other demonstration pieces (scissor lift, motor we disassembled, etc.)</p>
 <p>Description: Contacted the organizer for a local elementary school science fair and asked if we could bring in the robot to show the kids. They agreed and helped us set up in a room where kids and parents circulated around. The kids took turns driving the robot and looking at the other demonstration pieces we laid out on the table. Chloe and the coach talked to students and parents and explained the demonstrations, while Ethan and Mohit helped kids drive the robot.</p>
 </div>
+<img src="Science Fair.jpg" style="display:block;margin:auto;" title="Science Fair" />
 <h5><p>Children's Day Off</p></h5>
 <div id="otext"><p>Date: April 27, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration, practiced what I would say, and prepared the other demonstrations.</p>
 <p>Description: Brought the robot into Bayer's Take Your Child to Work Day. Chloe, Ethan, and Mohit presented the robot in front of a large audience of about 100 kids. Chloe introduced the team and Ethan demonstrated the robot. The audience was then split up into two groups. One group looked at all the demonstration pieces presented by Chloe and the Coach, the other learned more about the robot specifics with Ethan and Mohit.</p>
 </div>
+<img src="Childrens Day Off" style="display:block;margin:auto;" title="Childrens Day Off" />
 <h5><p>Cub Scout Day Camp</p></h5>
 <div id="otext"><p>Date: August 3rd, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration.</p>
 <p>Description: Chloe and Ethan spent 2 hours demonstrating the robot to cub scouts and letting them drive the robot.</p>
 </div>
+<img src="Cub Scout Day Camp" style="display:block;margin:auto;" title="Cub Scout Day Camp />
 <h5><p>Going Back to School</p></h5>
 <div id="otext"><p>Date: March 24th, 3 hours</p>
 <p>Preparation: Prepared the robot for demonstration and brought the other demonstration pieces (scissor lift, motor we disassembled, etc.)</p>
@@ -95,15 +99,23 @@ btn.childNodes[0].nodeValue="More";
 <p>Preparation: Prepared the robot for demonstration and organized the demonstration materials.</p>
 <p>Description: Chloe demonstrated the robot to a Cadet Girl Scout meeting (middle school aged girls). All the girls were then given the opportunity to drive the robot. They also looked at the demonstration materials and asked any questions they had. The girls and leaders were very impressed with the robot.</p>
 </div>
+<img src="Girl Scout Demo.jpg" style="display:block;margin:auto;" title="Girl Scout Demo" />
 <h5><p>NetApp</p></h5>
 <div id="otext"><p>Date: July 26th, 5 hours</p>
 <p>Preparation: Reviewed the event so everyone knew what was going to happen and was prepared.
 <p>Description: Julie shared her experience with FTC with a group of girls. She then helped the girls build and program Mindstorms Lego robots to complete specific tasks.  
 </div>
+<img src="NetApp" style="display:block;margin:auto;" title="NetApp />
 <h5><p>Pre-Engineering<p></h5>
 <div id="otext"><p>Date: June 12, 12 hours</p>
 <p>Preparation: We spent 2 hours counting and finding pieces for a kit robot for groups to build. Then we worked with other teams to make sure there were 6 complete kits. Once we had two kits, we pre-assembled the arm to speed up the building process.</p>
 <p>Description: We worked with a few teams to help kids build a robot from instructions. In the morning we had one group of kids. The kids then moved on to a different activity and another group came in the afternoon. Due to the complexity of the robot we made modifications as time went on. There was a different set of kids in the morning and afternoon. In the morning we helped the kids build the robot from the construction manual. However, not all groups were able to finish. We also ran into some other problems that the volunteers had to trouble shoot, so we could get all the robots working. In the afternoon, we decided to change the goal and focus on building the fastest robot instead of building the robot in the manual. This meant that Chloe had to create a new program without a servo claw for the teams to use. Overall, we taught the kids how to build robots and introduced some of the problems that are an everyday occurrence for FTC teams. </p>
+</div>
+<img src="Pre-Engineering" style="display:block;margin:auto;" title="Pre-Engineering" />
+<h5><p>Girl Scout Robotics Camp</p></h5>
+<div id="otext"><p>Date: January 6th, 6 hours</p>
+<p>Preparation: Replaced broken rubber bands on the rubber band drums. Then put the wheels and servo back on the robot. </p>
+<p>Description: Chloe demonstrated the robot to a group of Brownie and Junior Girl Scouts. She then helped the girls create their own Lego robots to complete a challenge from the FLL 2012 challenge Senior Solutions. When the girls had a break from programming, Chloe also helped them drive the robot.</p>
 <footer id="footer" align="center"><font-size="2px">
 Copyright 2017 Mechanical Marauders.
 </font>
