--- a/Outreach.html
+++ b/Outreach.html
@@ -68,7 +68,7 @@ btn.childNodes[0].nodeValue="More";
 <p>reparation: Prepared the robot for demonstration and brought it and the center vortex into school.</p>
 <p>Description: Brought the robot into 1st period, SMART Lunch, 3rd period, and 4th period to demonstrate the robot to students in Physics I and II. Julie and I demonstrated the robot, explained the engineering process, and let the kids drive the robot.</p>
 </div>
-<img src="Physics in Action" style="display:block;margin:auto;" title="Physics in Action" />
+<img src="Physics in Action.jpg" style="display:block;margin:auto;" title="Physics in Action" />
 <h5><p>Science Fair</p></h5>
 <div id="otext">
 <p>Date: April 19, 2 hours</p>
@@ -81,13 +81,13 @@ btn.childNodes[0].nodeValue="More";
 <p>Preparation: Prepared the robot for demonstration, practiced what I would say, and prepared the other demonstrations.</p>
 <p>Description: Brought the robot into Bayer's Take Your Child to Work Day. Chloe, Ethan, and Mohit presented the robot in front of a large audience of about 100 kids. Chloe introduced the team and Ethan demonstrated the robot. The audience was then split up into two groups. One group looked at all the demonstration pieces presented by Chloe and the Coach, the other learned more about the robot specifics with Ethan and Mohit.</p>
 </div>
-<img src="Childrens Day Off" style="display:block;margin:auto;" title="Childrens Day Off" />
+<img src="Childrens Day Off.jpg" style="display:block;margin:auto;" title="Childrens Day Off" />
 <h5><p>Cub Scout Day Camp</p></h5>
 <div id="otext"><p>Date: August 3rd, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration.</p>
 <p>Description: Chloe and Ethan spent 2 hours demonstrating the robot to cub scouts and letting them drive the robot.</p>
 </div>
-<img src="Cub Scout Day Camp" style="display:block;margin:auto;" title="Cub Scout Day Camp />
+<img src="Cub Scout Day Camp.jpg" style="display:block;margin:auto;" title="Cub Scout Day Camp />
 <h5><p>Going Back to School</p></h5>
 <div id="otext"><p>Date: March 24th, 3 hours</p>
 <p>Preparation: Prepared the robot for demonstration and brought the other demonstration pieces (scissor lift, motor we disassembled, etc.)</p>
@@ -105,7 +105,7 @@ btn.childNodes[0].nodeValue="More";
 <p>Preparation: Reviewed the event so everyone knew what was going to happen and was prepared.
 <p>Description: Julie shared her experience with FTC with a group of girls. She then helped the girls build and program Mindstorms Lego robots to complete specific tasks.  
 </div>
-<img src="NetApp" style="display:block;margin:auto;" title="NetApp />
+<img src="NetApp.jpg" style="display:block;margin:auto;" title="NetApp />
 <h5><p>Pre-Engineering<p></h5>
 <div id="otext"><p>Date: June 12, 12 hours</p>
 <p>Preparation: We spent 2 hours counting and finding pieces for a kit robot for groups to build. Then we worked with other teams to make sure there were 6 complete kits. Once we had two kits, we pre-assembled the arm to speed up the building process.</p>
