--- a/Outreach.html
+++ b/Outreach.html
@@ -69,6 +69,7 @@ btn.childNodes[0].nodeValue="More";
 <p>Description: Brought the robot into 1st period, SMART Lunch, 3rd period, and 4th period to demonstrate the robot to students in Physics I and II. Julie and I demonstrated the robot, explained the engineering process, and let the kids drive the robot.</p>
 </div>
 <img src="Physics in Action.jpg" style="display:block;margin:auto;" title="Physics in Action" />
+
 <h5><p>Science Fair</p></h5>
 <div id="otext">
 <p>Date: April 19, 2 hours</p>
@@ -82,18 +83,24 @@ btn.childNodes[0].nodeValue="More";
 <p>Description: Brought the robot into Bayer's Take Your Child to Work Day. Chloe, Ethan, and Mohit presented the robot in front of a large audience of about 100 kids. Chloe introduced the team and Ethan demonstrated the robot. The audience was then split up into two groups. One group looked at all the demonstration pieces presented by Chloe and the Coach, the other learned more about the robot specifics with Ethan and Mohit.</p>
 </div>
 <img src="Childrens Day Off.jpg" style="display:block;margin:auto;" title="Childrens Day Off" />
+
 <h5><p>Cub Scout Day Camp</p></h5>
 <div id="otext"><p>Date: August 3rd, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration.</p>
 <p>Description: Chloe and Ethan spent 2 hours demonstrating the robot to cub scouts and letting them drive the robot.</p>
 </div>
-<img src="Cub Scout Day Camp.jpg" style="display:block;margin:auto;" title="Cub Scout Day Camp />
+
+<img src="Cub Scout Day Camp.jpg" style="display:block;margin:auto;" title="Cub Scout Day Camp" />
+
+
 <h5><p>Going Back to School</p></h5>
 <div id="otext"><p>Date: March 24th, 3 hours</p>
 <p>Preparation: Prepared the robot for demonstration and brought the other demonstration pieces (scissor lift, motor we disassembled, etc.)</p>
 <p>Description: A local school reached out to Dr. Bennet about having a robotics team come in so last minute we volunteered to help. We demonstrated the robot in front of a group of kids. We then divided the group, so half could look at the demonstration items we brought such as the scissor lift, a motor that has been taken apart, and the tape measure hook. The other group learned more about the robot and a few even got to drive it. The groups then switched so everyone saw both things. </p>
 </div>
+
 <img src="Going Back To School.jpg" style="display:block;margin:auto;" title="Going Back To School" />
+
 <h5><p>Girl Scout Demo</p></h5>
 <div id="otext"><p>Date: October 8th, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration and organized the demonstration materials.</p>
@@ -105,13 +112,13 @@ btn.childNodes[0].nodeValue="More";
 <p>Preparation: Reviewed the event so everyone knew what was going to happen and was prepared.
 <p>Description: Julie shared her experience with FTC with a group of girls. She then helped the girls build and program Mindstorms Lego robots to complete specific tasks.  
 </div>
-<img src="NetApp.jpg" style="display:block;margin:auto;" title="NetApp />
+<img src="NetApp.jpg" style="display:block;margin:auto;" title="NetApp" />
 <h5><p>Pre-Engineering<p></h5>
 <div id="otext"><p>Date: June 12, 12 hours</p>
 <p>Preparation: We spent 2 hours counting and finding pieces for a kit robot for groups to build. Then we worked with other teams to make sure there were 6 complete kits. Once we had two kits, we pre-assembled the arm to speed up the building process.</p>
 <p>Description: We worked with a few teams to help kids build a robot from instructions. In the morning we had one group of kids. The kids then moved on to a different activity and another group came in the afternoon. Due to the complexity of the robot we made modifications as time went on. There was a different set of kids in the morning and afternoon. In the morning we helped the kids build the robot from the construction manual. However, not all groups were able to finish. We also ran into some other problems that the volunteers had to trouble shoot, so we could get all the robots working. In the afternoon, we decided to change the goal and focus on building the fastest robot instead of building the robot in the manual. This meant that Chloe had to create a new program without a servo claw for the teams to use. Overall, we taught the kids how to build robots and introduced some of the problems that are an everyday occurrence for FTC teams. </p>
 </div>
-<img src="Pre-Engineering" style="display:block;margin:auto;" title="Pre-Engineering" />
+<img src="Pre-Engineering.jpg" style="display:block;margin:auto;" title="Pre-Engineering" />
 <h5><p>Girl Scout Robotics Camp</p></h5>
 <div id="otext"><p>Date: January 6th, 6 hours</p>
 <p>Preparation: Replaced broken rubber bands on the rubber band drums. Then put the wheels and servo back on the robot. </p>
