--- a/Outreach.html
+++ b/Outreach.html
@@ -55,7 +55,7 @@ btn.childNodes[0].nodeValue="More";
 
 <header>Mechanical Marauders<img id="logo2" src="MMlogo3.jpg" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="right"/>
 </header>
-
+<div>
 <div>
 <img src="MMlogo.jpg" style="display:block;margin:auto;" title="The Mechanical Marauders demostrating the robot" />
 <h1>Outreach</h1>
@@ -123,10 +123,8 @@ btn.childNodes[0].nodeValue="More";
 <div id="otext"><p>Date: January 6th, 6 hours</p>
 <p>Preparation: Replaced broken rubber bands on the rubber band drums. Then put the wheels and servo back on the robot. </p>
 <p>Description: Chloe demonstrated the robot to a group of Brownie and Junior Girl Scouts. She then helped the girls create their own Lego robots to complete a challenge from the FLL 2012 challenge Senior Solutions. When the girls had a break from programming, Chloe also helped them drive the robot.</p>
-<footer id="footer" align="center"><font-size="2px">
-Copyright 2017 Mechanical Marauders.
-</font>
-</footer>
+</div>
+
 
 </body>
 </html>
