--- a/TeamPage.html
+++ b/TeamPage.html
@@ -76,12 +76,26 @@ btn.childNodes[0].nodeValue="More";
 <h2><u>Aaron<img src="aaron.JPG" id="teampic"/></h2></u>
 <h2>Programmer</h2>
 <p>Aaron Jong is a tenth grader at Panther Creek High School. He is the Assistant Programmer on the FTC team. He helps with creating the autonomous programs and robot movement programs. In his free time, Aaron enjoys video games, programming computers, making bad puns, and reading (his reading schedule is booked). This is his second year of FTC, and has lots of experience from FLL in elementary school. Aaron wants to become a computer engineer in his future.</p>
-</div>
 
-<footer id="footer" align="center"><font-size="2px">
-Copyright 2017 Mechanical Marauders.
-</font>
-</footer>
+<h2><u>Ethan<img src="ethan2.jpg" id="teampic"/></h2></u>
+<h2>Builder</h2>
+<p>Ethan J is an 8th grader in
+Mills Park Middle School. He
+recently joined 2 months ago. He
+helps with building the robot and
+anything manual. In his free time
+Ethan likes swimming as he has
+swam on a year round team for
+over 6 years, trolling his friends,
+and playing video games. This is
+his first year with FTC but like
+Aaron, has multiple years of
+experience with FLL. Ethan has
+no idea what he is going to major in as he has a habit of
+doing things last minute. Ethan also wants to invent
+something really cool has no imagination what so ever so he
+doesn’t know what to invent.</p>
+</div>
 
 </body>
 </html>
