--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 	<!--links to my external reference sheet for over arching styles-->
 	<link rel="stylesheet" type="text/css" href="mmstyle.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112316365-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-112316365-1');
+</script>
 </head>
 
 <body>
@@ -29,6 +37,13 @@
 		Outreach
 	</font></h3>
 </button>
+</a>
+<a href="Robot.html">
+	<button>
+		<h3><font size="5em">
+			Robot
+		</font></h3>
+	</button>
 </a>
 <a href="mailto:ftc6123@gmail.com">
 <button>
@@ -67,7 +82,7 @@ btn.childNodes[0].nodeValue="More";
 <br />
 <p align="center" style="padding-left:50px; padding-top:80px;">Mechanical Marauders at the Southern Super Regional</p>
 <img src="Robot.JPG" width="50%" style="display:block;margin:auto" id="oldteam"/>
-<p align="center">Mechanical Marauders at States 2017</p>     
+<p align="center">Mechanical Marauders at States 2017</p>
 <img src="TeamCurrent.jpg" width="50%" style="display:block;margin:auto" title="Mechanical Marauders at States"/>
 <br />
 </div>
