--- a/Outreach.html
+++ b/Outreach.html
@@ -5,6 +5,15 @@
 	<title>Mechanical Marauders</title>
 	<!--links to my external reference sheet for over arching styles-->
 	<link rel="stylesheet" type="text/css" href="mmstyle.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112316365-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112316365-1');
+</script>
 </head>
 
 <body>
@@ -26,6 +35,13 @@
 		Meet the team
 	</font></h3>
 </button>
+</a>
+<a href="Robot.html">
+	<button>
+		<h3><font size="5em">
+			Robot
+		</font></h3>
+	</button>
 </a>
 <a href="mailto:ftc6123@gmail.com">
 <button>
@@ -110,7 +126,7 @@ btn.childNodes[0].nodeValue="More";
 <h5><p>NetApp</p></h5>
 <div id="otext"><p>Date: July 26th, 5 hours</p>
 <p>Preparation: Reviewed the event so everyone knew what was going to happen and was prepared.
-<p>Description: Julie shared her experience with FTC with a group of girls. She then helped the girls build and program Mindstorms Lego robots to complete specific tasks.  
+<p>Description: Julie shared her experience with FTC with a group of girls. She then helped the girls build and program Mindstorms Lego robots to complete specific tasks.
 </div>
 <img src="NetApp.jpg" style="display:block;margin:auto;" title="NetApp" />
 <h5><p>Pre-Engineering<p></h5>
