--- a/TeamPage.html
+++ b/TeamPage.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<title>Mechanical Marauders</title>
 	<!--links to my external reference sheet for over arching styles-->
 	<link rel="stylesheet" type="text/css" href="mmstyle.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112316365-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112316365-1');
+</script>
 </head>
 
 <body>
@@ -27,6 +36,13 @@
 		Outreach
 	</font></h3>
 </button>
+</a>
+<a href="Robot.html">
+	<button>
+		<h3><font size="5em">
+			Robot
+		</font></h3>
+	</button>
 </a>
 <a href="mailto:ftc6123@gmail.com">
 <button>
