--- a/Robot.html
+++ b/Robot.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <img src="undercont.gif"/>
-  <p style="text-align:center;vertical-align:middle;">Under Construction. Come back later!</p>
+  <p style="text-align:center;vertical-align:middle;">Under Construction. <br />Come back later!</p>
 
 </body>
 </html>
