--- a/Robot.html
+++ b/Robot.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<img src="undercont.gif" style="align:middle;vertical-align:middle;padding-bottom:100px;position:fixed;left:500px;"/>
+<img src="undercont.gif" style="text-align:center;vertical-align:middle;position:fixed;top:500px;left:630px;"/>
   <p style="text-align:center;vertical-align:middle;position:fixed;top:600px;">Under Construction. <br />Come back later!</p>
 
 </body>
