--- a/Robot.html
+++ b/Robot.html
@@ -12,8 +12,8 @@
 
 </head>
 <body>
-<img src="undercont.gif" style="text-align:center;vertical-align:middle;position:fixed;top:500px;left:630px;"/>
-  <p style="text-align:center;vertical-align:middle;position:fixed;top:600px;">Under Construction. <br />Come back later!</p>
+<img src="undercont.gif" style="align:middle;vertical-align:middle;padding-bottom:100px;position:fixed;left:500px;"/>
+  <p style="text-align:center;vertical-align:middle;position:fixed;top:530px;left:600px">Under Construction. <br />Come back later!</p>
 
 </body>
 </html>
