--- a/Outreach.html
+++ b/Outreach.html
@@ -69,7 +69,7 @@ btn.childNodes[0].nodeValue="More";
 };
 </script>
 
-<header>Mechanical Marauders<img id="logo2" src="MMlogo3.jpg" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="right"/>
+<header>Mechanical Marauders<img id="logo2" src="MMLogo3.jpg" style="display:block;margin:auto;" title="Mechanical Marauders' logo" align="right"/>
 </header>
 <div>
 <div>
