--- a/Robot.html
+++ b/Robot.html
@@ -80,8 +80,18 @@
   <header>Mechanical Marauders<img id="logo2" src="MMLogo3.jpg" style="display:block;margin:auto;" align="right" padding-right="0px"/>
   </header>
 
-<img src="undercont.gif" style="align:middle;vertical-align:middle;padding-bottom:100px;position:fixed;left:500px;"/>
+<!--<img src="undercont.gif" style="align:middle;vertical-align:middle;padding-bottom:100px;position:fixed;left:500px;"/>
   <p style="text-align:center;vertical-align:middle;position:fixed;top:430px;left:600px">Under Construction. <br />Come back later!</p>
-
+-->
+<div>
+<p><h1><u>Our Robot!</u></h1></p>
+<img src="robotpic.jpg" style="display:block;margin:auto;" align="right" id="robotpic">
+<p> Our robot is a collection of many different systems we have seen other teams using. The original designers had success with their design we decided to benchmark on it and make it better. One <br />such example of this is our collection system, we saw a video on the FTC subreddit of a team completing the snake cipher in 72 seconds and decided this would be a good design
+  to use on our <br />robot. Here our robots various systems will be explained.
+<p><h2><u>Drive Train</u></h2></p>
+<p> The drive train we decided to go with this year was a 6 wheel drive system using 2 omni wheels and a green grippy wheel on each side. The omni wheels provide us great mobilty while the grippy <br />wheels provide us with stablity in order to climb the balancing stone. one thing we did differently with out drive train that other teams havent done is using only one motor on each side. This <br />decreases the speed but also lowers the weight and allows us to not have bulky motors in the way of crucial parts. </p>
+<p><h2><u>Collection System</u></h2></p>
+<p> Our collection system was originally designed by FTC team 207 Critical Mass but we decided to make it better. One change we made was using a belt and a motor instead of a motor and multiple <br />gears with a chain. We found this to be lighter and more reliable. Another thing we did was.</p>
+</div>
 </body>
 </html>
