--- a/Robot.html
+++ b/Robot.html
@@ -85,7 +85,7 @@
 -->
 <div>
 <p><h1><u>Our Robot!</u></h1></p>
-<img src="robotpic.jpg" style="display:block;margin:auto;" align="right" id="robotpic">
+<!--<img src="robotpic.jpg" style="display:block;margin:auto;" align="right" id="robotpic">-->
 <p> Our robot is a collection of many different systems we have seen other teams using. The original designers had success with their design we decided to benchmark on it and make it better. One <br />such example of this is our collection system, we saw a video on the FTC subreddit of a team completing the snake cipher in 72 seconds and decided this would be a good design
   to use on our <br />robot. Here our robots various systems will be explained.
 <p><h2><u>Drive Train</u></h2></p>
