Updated All Files

--- a/Outreach.html
+++ b/Outreach.html
@@ -75,9 +75,9 @@ btn.childNodes[0].nodeValue="More";
 <div>
 <img src="MMlogo.jpg" style="display:block;margin:auto;" title="The Mechanical Marauders demostrating the robot" />
 <h1>Outreach</h1>
-<p>Over the years, our team has discovered the importance of outreach. We have fully embraced the it is more than just about the robot motto. This year we have done more outreach than ever and we are just getting started. We are planning to volunteer at FLL tournaments and create a basic robot instruction manual for rookie teams. Giving back is a big part of what we do because of all we have gained from FTC over the years.
+<p>Over the years, our team has discovered the importance of outreach. We have fully embraced the ideology that FTC is about more than just the robot. This year we have done more outreach than ever and we are just getting started. We are planning to volunteer at FLL tournaments and create a basic robot instruction manual for rookie teams. Giving back is a big part of what we do because of all we have gained from FTC over the years.
 </p>
-<h3>Some examples of our outreach are </h3>
+<h3>Some examples of our outreach are: </h3>
 <h5><p>Physics in Action</p></h5>
 <div id="otext">
 <p>Date: May 17, 1 hour</p>
@@ -120,7 +120,7 @@ btn.childNodes[0].nodeValue="More";
 <h5><p>Girl Scout Demo</p></h5>
 <div id="otext"><p>Date: October 8th, 2 hours</p>
 <p>Preparation: Prepared the robot for demonstration and organized the demonstration materials.</p>
-<p>Description: Chloe demonstrated the robot to a Cadet Girl Scout meeting (middle school aged girls). All the girls were then given the opportunity to drive the robot. They also looked at the demonstration materials and asked any questions they had. The girls and leaders were very impressed with the robot.</p>
+<p>Description: Chloe demonstrated the robot to a Cadet Girl Scout meeting (girls in middle school). All the girls were then given the opportunity to drive the robot. They also looked at the demonstration materials and asked any questions they had. The girls and their leaders were very impressed with the robot.</p>
 </div>
 <img src="Girl Scout Demo.jpg" style="display:block;margin:auto;" title="Girl Scout Demo" />
 <h5><p>NetApp</p></h5>
