--- a/Robot.html
+++ b/Robot.html
@@ -80,18 +80,23 @@
   <header>Mechanical Marauders<img id="logo2" src="MMLogo3.jpg" style="display:block;margin:auto;" align="right" padding-right="0px"/>
   </header>
 
-<img src="undercont.gif" style="align:middle;vertical-align:middle;padding-bottom:100px;position:fixed;left:500px;"/>
+<!--<img src="undercont.gif" style="align:middle;vertical-align:middle;padding-bottom:100px;position:fixed;left:500px;"/>
   <p style="text-align:center;vertical-align:middle;position:fixed;top:430px;left:600px">Under Construction. <br />Come back later!</p>
-
-<!--<div>
+-->
+<div>
 <p><h1><u>Our Robot!</u></h1></p>
 <img src="robotpic.jpg" style="display:block;margin:auto;" align="right" id="robotpic">
-<p> Our robot is a collection of many different systems we have seen other teams using. The original designers had success with their design we decided to benchmark on it and make it better. One <br />such example of this is our collection system, we saw a video on the FTC subreddit of a team completing the snake cipher in 72 seconds and decided this would be a good design
-  to use on our <br />robot. Here our robots various systems will be explained.
+<p> Our robot is a collection of many different system's we have seen other teams using. The original designers had success with their design we decided to benchmark on it and make it better. One <br />such example of this is our collection system, we saw a video on the FTC subreddit of a team completing the snake cipher in 72 seconds and decided this would be a good design
+  to use on our <br />robot. Here our robot's various system's will be explained.
 <p><h2><u>Drive Train</u></h2></p>
 <p> The drive train we decided to go with this year was a 6 wheel drive system using 2 omni wheels and a green grippy wheel on each side. The omni wheels provide us great mobilty while the grippy <br />wheels provide us with stablity in order to climb the balancing stone. one thing we did differently with out drive train that other teams havent done is using only one motor on each side. This <br />decreases the speed but also lowers the weight and allows us to not have bulky motors in the way of crucial parts. </p>
 <p><h2><u>Collection System</u></h2></p>
-<p> Our collection system was originally designed by FTC team 207 Critical Mass but we decided to make it better. One change we made was using a belt and a motor instead of a motor and multiple <br />gears with a chain. We found this to be lighter and more reliable. Another thing we did was.</p>
-</div>-->
+<p> Our collection system was originally designed by FTC team 207 Critical Mass but we decided to make it better. One change we made was using a belt and a motor instead of a motor and multiple <br />gears with a chain. We found this to be lighter and more reliable. Another thing we did was use 3 different types of wheels. From green to black they get increasingly harder in feel. The green one is squishy and allows us to pull in all of the blocks no matter their angle and the back 2 wheels straighten the blocks out.</p>
+<p><h2><u>Lift System</u></h2></p>
+<p>Our lift system consists of 2 rails that allow us to reach the top parts of the cryptobox with ease. The part where the cubes goes is coated with a substance that increases the slipperiness so that <br />the cubes slide to the very back. </p>
+<p><h2><u>Electronics</u></h2></p>
+<p>This year we are using 2 of the new rev expansion hubs. This has caused us some pain because of the need to use dongles to connect servos and sensors. In the end its worth it because it allows us to use less hubs for more connections.</p>
+
+</div>
 </body>
 </html>
