--- a/TeamPage.html
+++ b/TeamPage.html
@@ -109,7 +109,7 @@ Aaron, has multiple years of
 experience with FLL. Ethan has
 no idea what he is going to major in as he has a habit of
 doing things last minute. Ethan also wants to invent
-something really cool has no imagination what so ever so he
+something really cool but has no imagination what so ever so he
 doesn’t know what to invent.</p>
 </div>
 
