--- a/Robot.html
+++ b/Robot.html
@@ -17,6 +17,13 @@
   </button>
 
   <div id="navigation" class="navigation">
+  <a href="index.html">
+    <button>
+      <h3><font size="5em">
+        Home
+      </font></h3>
+    </button>
+  </a>
   <a href="MMexperiment.html">
   </a>
   <a href="TeamPage.html">
@@ -33,10 +40,10 @@
   	</font></h3>
   </button>
   </a>
-  <a href="Robot.html">
+  <a href="PB2.html">
   	<button>
   		<h3><font size="5em">
-  			Robot
+  			Pushbot 2.0
   		</font></h3>
   	</button>
   </a>
