--- a/TeamPage.html
+++ b/TeamPage.html
@@ -96,9 +96,9 @@ btn.childNodes[0].nodeValue="More";
 <h2>FTC Interface</h2>
 <p>Mohit Chhaya is a Freshman at Panther Creek High School. This is his second year doing FTC and he has done FLL 2 years in a row. You can usually find Mohit playing games on the computer with his friends Ethan Flack and Kaden Adam. Mohit also plays soccer. Mohit’s role on the team is working on the robot, mainly the drive system and checking on the FTC Forums to make sure the team is aware of any changes. He is planning to be programmer when he grows up, and he can already code a bit in C# </p>
 
-<h2><u>Aaron<img src="aaron.JPG" id="teampic"/></h2></u>
+<h2><u>Aaron<img src="aaron.JPG" id="teampic"/></h2></u>	
 <h2>Programmer</h2>
-<p>Aaron Jong is a tenth grader at Panther Creek High School. He is the Assistant Programmer on the FTC team. He helps with creating the autonomous programs and robot movement programs. In his free time, Aaron enjoys video games, programming computers, making bad puns, and reading (his reading schedule is booked). This is his second year of FTC, and has lots of experience from FLL in elementary school. Aaron wants to become a computer engineer in his future.</p>
+<p>Aaron Jong is a tenth grader at Panther Creek High School. He is the Head Programmer on the FTC team. He helps with creating the autonomous programs and robot movement programs. In his free time, Aaron enjoys video games, programming computers, making bad puns, and reading (his reading schedule is booked). This is his second year of FTC, and has lots of experience from FLL in elementary school. Aaron wants to become a computer engineer in his future.</p>
 
 <h2><u>Ethan<img src="ethan2.jpg" id="teampic"/></h2></u>
 <h2>Builder</h2>
