--- a/PB2.html
+++ b/PB2.html
@@ -76,6 +76,9 @@ btn.childNodes[0].nodeValue="More";
 }
 };
 </script>
+<script>
+
+</script>
 <header>Mechanical Marauders<img id="logo2" src="MMLogo3.jpg" style="display:block;margin:auto;" align="right"/>
 </header>
 <object width="1250px" height="1000px"data="Pushbot 2.0.pdf" id="pb2"></object>
