Updated Everything as of 1/21/18

--- a/PB2.html
+++ b/PB2.html
@@ -81,6 +81,7 @@ btn.childNodes[0].nodeValue="More";
 </script>
 <header>Mechanical Marauders<img id="logo2" src="MMLogo3.jpg" style="display:block;margin:auto;" align="right"/>
 </header>
+<p><h2>This part of the website does not work that well on phones. Please use a computer. Sorry for any inconvenience caused.</h2></p>
 <object width="1250px" height="1000px"data="Pushbot 2.0.pdf" id="pb2"></object>
 <div>
 	<p id="pb2text">Rookie teams use this updated Pushbot manual to create your very first robot! <br />This detailed manual guides you through building and programming in great detail. <br />In no time you will be making your own robots from scratch! <br />Created by: FTC Team #6123, Mechanical Marauders from Cary,North Carolina.</p>
