Made Awards Page updated as of 6/7/2018

--- a/PB2.html
+++ b/PB2.html
@@ -45,6 +45,13 @@
 		</font></h3>
 	</button>
 </a>
+<a href="awards.html">
+<button>
+	<h3><font size="5em">
+		Awards
+	</font></h3>
+</button>
+</a>
 <a href="index.html">
 	<button>
 		<h3><font size="5em">
