--- a/contactus.html
+++ b/contactus.html
@@ -41,6 +41,13 @@
 	</font></h3>
 </button>
 </a>
+<a href="awards.html">
+<button>
+	<h3><font size="5em">
+		Awards
+	</font></h3>
+</button>
+</a>
 <a href="Robot.html">
 	<button>
 		<h3><font size="5em">
