--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
 		</font></h3>
 	</button>
 </a>
+<a href="awards.html">
+<button>
+	<h3><font size="5em">
+		Awards
+	</font></h3>
+</button>
+</a>
 <a href="mailto:ftc6123@gmail.com">
 <button>
 	<h3><font size="5em">
